# buybak-mvp

./: .gitignore  Dockerfile.backup  MyWorkflowFSMC.py  MyWorkflowServer.py  README.md  StreamingServer.py  StreamingWorkflow.py  flask_demo.py  generate_fsmc.sh  helper.py  index_server.py  launch_app.sh  main.py  myworkflowserver.sh  pyproject.toml  requirements.txt  runserver.sh
TradesCSV/: LLY.csv  MarketCap.csv  reverse_AMZN.csv  reverse_Alsace.csv  reverse_Bordeaux.bkp  reverse_Champagne.csv  reverse_Corsican.csv  reverse_Franconia.csv  reverse_French.csv  reverse_Jura.csv  reverse_Kaiserstuhl.csv  reverse_LLY.csv  reverse_NVDA.csv  reverse_NVDA2.csv  reverse_goog_live.csv  symboldefs.csv
TradesCSV/storage/AlsaceWine/: default__vector_store.json  docstore.json  index_store.json
TradesCSV/storage/BordeauxWine/: default__vector_store.json  docstore.json  index_store.json
TradesCSV/storage/BurgundyWine/: default__vector_store.json  docstore.json  index_store.json
TradesCSV/storage/ChampagneWine/: default__vector_store.json  docstore.json  index_store.json
TradesCSV/storage/CorsicanWine/: default__vector_store.json  docstore.json  index_store.json
TradesCSV/storage/FrenchWine/: default__vector_store.json  docstore.json  index_store.json
TradesCSV/storage/JuraWine/: default__vector_store.json  docstore.json  index_store.json
TradesCSV/storage/RhoneWine/: default__vector_store.json  docstore.json  index_store.json
TradesCSV/storage/SavoyWine/: default__vector_store.json  docstore.json  index_store.json
TradesCSV/storage/SouthWestFrenchWine/: default__vector_store.json  docstore.json  index_store.json
buybaktools/alsace_wine_tools/: __init__.py  base.py
buybaktools/bordeaux_wine_tools/: __init__.py  base.py
buybaktools/burgundy_wine_tools/: __init__.py  base.py
buybaktools/champagne_wine_tools/: __init__.py  base.py
buybaktools/corsican_wine_tools/: __init__.py  base.py
buybaktools/french_wine_tools/: __init__.py  base.py
buybaktools/french_wines_tools/: __init__.py  base.py
buybaktools/german_time_series_tools/: __init__.py  base.py
buybaktools/german_wines_tools/: __init__.py  base.py
buybaktools/jura_wine_tools/: __init__.py  base.py
buybaktools/rhone_wine_tools/: __init__.py  base.py
buybaktools/savoy_wine_tools/: __init__.py  base.py
buybaktools/southwestfrench_wine_tools/: __init__.py  base.py
buybaktools/time_series_tools/: __init__.py  base.py
buybakworkflow/: .MyWorkflowContext.py.swo  MyWorkflowContext.py  MyWorkflowEvents.py  events.py  models.py  rabbitmq.py  schemas.py
docs/: satya_notes.txt  tony_ai_pitch_notes.txt
fsmc/: FSMC.py  MyWorkflow.sm  backup.sm
graphs/: GraphMyWorkflow.html
react_frontend/: package-lock.json  package.json
react_frontend/src/apis/: queryIndex.js
react_frontend/src/routes/: index.js
react_frontend/src/store/: actions.js  (+1 more)
(+40 files in other folders)
