[tool.poetry]
name = "StreamingWorkflow"
version = "0.1.0"
description = "Backend for StreamingWorkflow"
authors = ["Sameer Kulkarni <sameer@buybak.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fake-useragent = "^1.5.1"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
llama-index = "^0.11.3"
click = "^8.1.7"
llama-index-embeddings-azure-openai = "^0.2.5"
llama-index-multi-modal-llms-azure-openai = "^0.2.0"
llama-parse = "^0.4.9"
llama-index-vector-stores-qdrant = "^0.3.0"
llama-index-storage-docstore-redis = "^0.2.0"
llama-index-storage-index-store-redis = "^0.3.0"
llama-index-tools-azure-code-interpreter = "^0.3.0"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
llama-index-tools-tavily-research = "^0.2.0"
llama-index-llms-anthropic = "^0.3.1"
streamlit = "^1.38.0"
sseclient = "^0.0.27"
httpx = "^0.27.2"
streamlit-autorefresh = "^1.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
