[tool.poetry]
name = "StreamingWorkflow"
version = "0.1.0"
description = "Backend for StreamingWorkflow"
authors = ["Sameer Kulkarni <sameer@buybak.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fake-useragent = "^1.5.1"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
click = "^8.1.7"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
streamlit = "^1.38.0"
sseclient = "^0.0.27"
httpx = "^0.27.2"
streamlit-autorefresh = "^1.0.1"
llama-index                              = "0.12.25"
llama-index-agent-openai                 = "0.4.6"
llama-index-core                         = "0.12.25"
llama-index-llms-openai                  = "0.3.38"
llama-index-readers-llama-parse          = "0.4.0"
llama-index-utils-workflow               = "0.3.1"
ta                                       = "0.11.0"
coreforecast                             = "0.0.16"
mlforecast                               = "1.0.2"
utilsforecast                            = "0.2.12"
xgboost                                  = "3.0.0"
lightgbm                                 = "4.6.0"
matplotlib                               = "3.10.1"
matplotlib-inline                        = "0.1.7"
pika                                     = "1.3.2"
markdown-it-py                           = "3.0.0"
Markdown                                 = "3.8"
MarkupSafe                               = "3.0.2"
dict                                     = "2018.11.19"
frozendict                               = "2.4.6"
multidict                                = "6.2.0"
huggingface-hub                          = "0.29.3"
llama-index-embeddings-huggingface       = "0.5.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
